Fix username overflowing

--- a/src/css/UserList.css
+++ b/src/css/UserList.css
@@ -81,5 +81,6 @@ input[type='search']{
     right: 0;
     bottom: 0;
     width: 100%;
+    z-index: 99;
   }
 }
